--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "metalsmith-sass": "^1.4.0",
     "metalsmith-serve": "0.0.7",
     "metalsmith-watch": "^1.0.3"
+  },
+  "devDependencies": {
+    "metalsmith-assets": "^0.1.0"
   }
 }
