--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "metalsmith-sass": "^1.4.0",
     "metalsmith-serve": "0.0.7",
     "metalsmith-watch": "^1.0.3"
+  },
+  "devDependencies": {
+    "metalsmith-date-formatter": "^1.0.2"
   }
 }
