--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "npm run build:dev",
     "build:dev": "node metalsmith.dev.js",
-    "build:prod": "node metalsmith.prod.js"
+    "build:prd": "node metalsmith.prod.js"
   },
   "author": "Frederik Prijck",
   "license": "ISC",
