--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "metalsmith-markdown": "^0.2.1",
     "metalsmith-permalinks": "^0.5.0",
     "metalsmith-prism": "^3.1.1",
-    "metalsmith-sass": "1.4.0",
+    "metalsmith-sass": "^1.5.0",
     "metalsmith-serve": "0.0.7",
     "metalsmith-watch": "^1.0.3"
   },
