--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "license": "ISC",
   "dependencies": {
     "handlebars": "^4.0.11",
+    "jstransformer-handlebars": "^1.0.0",
+    "jstransformer-html-minifier": "^1.1.0",
     "metalsmith": "^2.3.0",
     "metalsmith-assets": "^0.1.0",
     "metalsmith-collections": "^0.9.0",
+    "metalsmith-discover-partials": "^0.1.0",
     "metalsmith-imagemin": "^4.0.0",
     "metalsmith-layouts": "^2.0.0",
     "metalsmith-markdown": "^0.2.2",
