--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "metalsmith-assets": "^0.1.0",
     "metalsmith-collections": "^0.9.0",
     "metalsmith-discover-partials": "^0.1.0",
+    "metalsmith-drafts": "0.0.1",
     "metalsmith-imagemin": "^4.1.1",
     "metalsmith-layouts": "^2.1.0",
     "metalsmith-markdown": "^0.2.2",
