--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "metalsmith-prism": "^3.1.1",
     "metalsmith-sass": "^1.5.0",
     "metalsmith-serve": "0.0.7",
+    "metalsmith-tags": "^2.0.0",
     "metalsmith-watch": "^1.0.3"
   },
   "devDependencies": {
