--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "disqus-react": "^1.0.5",
     "gatsby": "^2.2.3",
     "gatsby-image": "^2.0.34",
     "gatsby-plugin-manifest": "^2.0.24",
