--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "disqus-react": "^1.0.5",
     "gatsby": "^2.2.3",
     "gatsby-image": "^2.0.34",
+    "gatsby-plugin-draft": "^0.0.4",
     "gatsby-plugin-manifest": "^2.0.24",
     "gatsby-plugin-offline": "^2.0.25",
     "gatsby-plugin-react-helmet": "^3.0.10",
